<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tutor.AddCourse">

    <RelativeLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/blue20"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/back"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/AddVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:text="@string/create_course"
            android:textColor="@color/background"
            android:textSize="20sp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/et_courseTitle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navigationBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:hint="Enter course Title"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/darker_grey"
        android:textColorHint="@color/grey" />

<!--    <EditText-->
<!--        android:id="@+id/et_totalVideos"-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/et_courseTitle"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_marginEnd="15dp"-->
<!--        android:layout_marginStart="15dp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:hint="Enter total lessons"-->
<!--        android:inputType="phone"-->
<!--        android:padding="12dp"-->
<!--        android:textColor="@color/darker_grey"-->
<!--        android:textColorHint="@color/grey"-->
<!--        android:textCursorDrawable="@null" />-->

    <Spinner
        android:id="@+id/courseSpinner"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_below="@+id/et_courseTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/course_type" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/courseSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:background="@color/blue20"
            android:padding="8dp">

            <TextView
                android:id="@+id/text_view_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/create"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>